--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -2,3 +2,85 @@
   width: 250px;
   height: 200px;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/* --------------------------------------Library csss---------------------------------------------------- */
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+/* --------------------------------------My Css---------------------------------------------------- */
+.form-add-new {
+  margin: 20px auto;
+  padding: 20px;
+  width: 500px;
+}
+.input-group {
+  padding: 20px;
+}
+.input-group > input {
+  width: 100%;
+  height: 30px;
+  border-radius: 8px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.btn-add-new {
+  cursor: pointer;
+  display: block;
+  margin: 20px auto;
+  width: 150px;
+  padding: 5px;
+  background-color: aqua;
+  border-radius: 8px;
+}
+
+.table-title {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.table-container {
+  padding: 10px;
+}
+.table-user {
+  border-collapse: collapse;
+  width: 100%;
+  border: 2px solid rgba(0, 0, 0, 0.4);
+}
+
+.table-user th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.table-user tr:hover {
+  background-color: aqua;
+}
